--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.3"
+    "mongoose": "^8.17.1"
   }
 }
